force-app/main/default/objects/Case/fields/No_Aplica_SLA__c.field-meta.xml
<CustomField>
    <fullName>No_Aplica_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de bandera para validar que la gestión no posee SLA.</description>
    <inlineHelpText>Campo de bandera para validar que la gestión no posee SLA.</inlineHelpText>
    <label>No Aplica SLA</label>
    <type>Checkbox</type>
</CustomField>