force-app/main/default/objects/Case/fields/No_Es_primer_prestamo__c.field-meta.xml
<CustomField>
    <fullName>No_Es_primer_prestamo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿No Es primer préstamo?</label>
    <type>Checkbox</type>
</CustomField>