force-app/main/default/objects/Case/fields/Nombre_agencia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_agencia__c</fullName>
    <label>Nombre agencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agencia</valueSetName>
    </valueSet>
</CustomField>