force-app/main/default/objects/Case/fields/Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente__c</fullName>
    <label>Nombre del Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>