force-app/main/default/objects/Case/fields/nombre_empleado__c.field-meta.xml
<CustomField>
    <fullName>nombre_empleado__c</fullName>
    <label>Nombre Empleado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>