force-app/main/default/objects/Case/fields/Nombre_Usuario_Firmador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Usuario_Firmador__c</fullName>
    <label>Nombre Usuario Firmador</label>
    <length>80</length>
    <type>Text</type>
</CustomField>