force-app/main/default/objects/Case/fields/Paso_por_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Paso_por_devolucion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Pasó por devolución?</label>
    <type>Checkbox</type>
</CustomField>