force-app/main/default/objects/Case/fields/Propietario_Caso__c.field-meta.xml
<CustomField>
    <fullName>Propietario_Caso__c</fullName>
    <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario del Caso</label>
    <type>Text</type>
</CustomField>