force-app/main/default/objects/Case/fields/Punto_Referencia_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Punto_Referencia_Residencia__c</fullName>
    <label>Punto Referencia Residencia</label>
    <type>TextArea</type>
</CustomField>