force-app/main/default/objects/Case/fields/RA_limite_exonerado__c.field-meta.xml
<CustomField>
    <fullName>RA_limite_exonerado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere aprobación por limite exonerado</label>
    <type>Checkbox</type>
</CustomField>