force-app/main/default/objects/Case/fields/Rango_salarial_Lps__c.field-meta.xml
<CustomField>
    <fullName>Rango_salarial_Lps__c</fullName>
    <label>Rango salarial Lps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.00 - 26,496.00</fullName>
            </value>
            <value>
                <fullName>26,496.01 - 52,992.00</fullName>
            </value>
            <value>
                <fullName>52,992.01 - 88,320.00</fullName>
            </value>
            <value>
                <fullName>88,320.01 - 176,640.00</fullName>
            </value>
            <value>
                <fullName>176,640.01 - 441,600.00</fullName>
            </value>
            <value>
                <fullName>Mayor a 441,600.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>