force-app/main/default/objects/Case/fields/Requiere_aprobacion_exoneracion__c.field-meta.xml
<CustomField>
    <fullName>Requiere_aprobacion_exoneracion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere aprobacion exoneracion</label>
    <type>Checkbox</type>
</CustomField>