force-app/main/default/objects/Case/fields/Respuesta_desde_Sysde_Esperando_Docu__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_desde_Sysde_Esperando_Docu__c</fullName>
    <label>Respuesta desde Sysde Esperando Docu</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>