force-app/main/default/objects/Case/fields/Respuesta_SF_Tarjetas__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_SF_Tarjetas__c</fullName>
    <label>Respuesta desde Salesforce Tarjetas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>