force-app/main/default/objects/Case/fields/Segunda_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Segunda_aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Segunda aprobación</label>
    <type>Checkbox</type>
</CustomField>