force-app/main/default/objects/Case/fields/Segundo_nombre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_nombre__c</fullName>
    <label>Segundo nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>