force-app/main/default/objects/Case/fields/Tasa_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Tasa_Cambio__c</fullName>
    <label>Tasa de Cambio</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>