force-app/main/default/objects/Case/fields/Telefono_Casa__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Casa__c</fullName>
    <label>Teléfono Casa</label>
    <type>Phone</type>
</CustomField>