force-app/main/default/objects/Case/fields/Telefono_Movil__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Movil__c</fullName>
    <label>Teléfono Movil</label>
    <type>Phone</type>
</CustomField>