force-app/main/default/objects/Case/fields/Tiene_numero_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>Tiene_numero_Prestamo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se ingresó el Número de Préstamo en el detalle del caso.</description>
    <inlineHelpText>Se ingresó el Número de Préstamo en el detalle del caso.</inlineHelpText>
    <label>¿Tiene número de Préstamo?</label>
    <type>Checkbox</type>
</CustomField>