force-app/main/default/objects/Case/fields/Tipo_actualizacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_actualizacion__c</fullName>
    <label>Tipo de actualización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>Crítica</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>No crítica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>