force-app/main/default/objects/Case/fields/Tipo_de_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Operacion__c</fullName>
    <label>Tipo de Operación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>