force-app/main/default/objects/Case/fields/Tipo_empresa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_empresa__c</fullName>
    <label>Tipo empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privada</fullName>
            </value>
            <value>
                <fullName>Pública</fullName>
            </value>
            <value>
                <fullName>Negocio propio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>