force-app/main/default/objects/Case/fields/Tipo_Estado_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Estado_Cuenta__c</fullName>
    <label>Tipo de Estado de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <default>true</default>
                <label>Detallado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>