force-app/main/default/objects/Case/fields/Tipo_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Identificacion__c</fullName>
    <label>Tipo de Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Identificacion2</valueSetName>
    </valueSet>
</CustomField>