force-app/main/default/objects/Case/fields/Usuario_firmador__c.field-meta.xml
<CustomField>
    <fullName>Usuario_firmador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario firmador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>