force-app/main/default/objects/Case/fields/Ver__c.field-meta.xml
<CustomField>
    <fullName>Ver__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Id, &quot;Detalle&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ver</label>
    <type>Text</type>
</CustomField>