force-app/main/default/objects/Case/fields/Viene_Email_2_Case__c.field-meta.xml
<CustomField>
    <fullName>Viene_Email_2_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso de creó desde el portal de Email to Case</description>
    <inlineHelpText>Caso de creó desde el portal de Email to Case</inlineHelpText>
    <label>¿Viene del portal de Email to Case?</label>
    <type>Checkbox</type>
</CustomField>