force-app/main/default/objects/Case/fields/Viene_Portal_Autogestion__c.field-meta.xml
<CustomField>
    <fullName>Viene_Portal_Autogestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visualizar Membrete</label>
    <type>Checkbox</type>
</CustomField>