force-app/main/default/objects/Case/recordTypes/Actualizacion_informacion.recordType-meta.xml
<RecordType>
    <fullName>Actualizacion_informacion</fullName>
    <active>true</active>
    <businessProcess>Aumento o Disminución de Aportes</businessProcess>
    <label>Actualización de información</label>
</RecordType>