force-app/main/default/objects/Case/recordTypes/Aumento_Disminucion_Aportes.recordType-meta.xml
<RecordType>
    <fullName>Aumento_Disminucion_Aportes</fullName>
    <active>true</active>
    <businessProcess>Aumento o Disminución de Aportes</businessProcess>
    <label>Modificación de aportes</label>
</RecordType>