force-app/main/default/objects/Case/recordTypes/Cambio_Subproducto.recordType-meta.xml
<RecordType>
    <fullName>Cambio_Subproducto</fullName>
    <active>true</active>
    <businessProcess>Cambio de Subproducto</businessProcess>
    <label>Cambio de Subproducto</label>
</RecordType>