force-app/main/default/objects/Case/recordTypes/Constancia.recordType-meta.xml
<RecordType>
    <fullName>Constancia</fullName>
    <active>true</active>
    <businessProcess>Constancia</businessProcess>
    <label>Constancia</label>
</RecordType>