force-app/main/default/objects/Case/recordTypes/Email_to_Case.recordType-meta.xml
<RecordType>
    <fullName>Email_to_Case</fullName>
    <active>true</active>
    <businessProcess>Email to Case</businessProcess>
    <description>Email to Case</description>
    <label>Email to Case</label>
</RecordType>