force-app/main/default/objects/Case/recordTypes/Estados_Cuenta.recordType-meta.xml
<RecordType>
    <fullName>Estados_Cuenta</fullName>
    <active>true</active>
    <businessProcess>Estados de Cuenta</businessProcess>
    <label>Estados de Cuenta</label>
</RecordType>