force-app/main/default/objects/Case/businessProcesses/Otros.recordType-meta.xml
<RecordType>
    <fullName>Otros</fullName>
    <active>true</active>
    <businessProcess>Otros</businessProcess>
    <label>Otros</label>
</RecordType>