force-app/main/default/objects/Case/recordTypes/Reposicion_Carnet.recordType-meta.xml
<RecordType>
    <fullName>Reposicion_Carnet</fullName>
    <active>true</active>
    <businessProcess>Retiros</businessProcess>
    <label>Reposición de Carnet</label>
</RecordType>