force-app/main/default/objects/Case/recordTypes/Retiros.recordType-meta.xml
<RecordType>
    <fullName>Retiros</fullName>
    <active>true</active>
    <businessProcess>Retiros</businessProcess>
    <label>Retiros</label>
</RecordType>