force-app/main/default/objects/Case/recordTypes/Reversiones.recordType-meta.xml
<RecordType>
    <fullName>Reversiones</fullName>
    <active>true</active>
    <businessProcess>Reversiones</businessProcess>
    <label>Reversiones</label>
</RecordType>