force-app/main/default/objects/Case/validationRules/Bloquear_Email_2_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Email_2_Case</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(
    CONTAINS($Label.CorreosRestringidosEmail2Case, SuppliedEmail),
    ISNEW(),
    RecordType.DeveloperName = &apos;Email_to_Case&apos;
),
AND( RecordType.DeveloperName != &apos;Email_to_Case&apos;, AccountId == Null, ISNEW())
)</errorConditionFormula>
    <errorMessage>Correo restringido para crear caso.</errorMessage>
</ValidationRule>