force-app/main/default/objects/Case/validationRules/CONSTANCIAS_Monto_compromiso_aporte.validationRule-meta.xml
<ValidationRule>
    <fullName>CONSTANCIAS_Monto_compromiso_aporte</fullName>
    <active>true</active>
    <description>Validar que no sea negativo</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Constancia&apos;,  Monto_compromiso_aporte__c &lt; 0 )</errorConditionFormula>
    <errorDisplayField>Monto_compromiso_aporte__c</errorDisplayField>
    <errorMessage>Este valor no puede ser negativo</errorMessage>
</ValidationRule>