force-app/main/default/objects/Case/validationRules/CONSTANCIAS_Usuario_firmador.validationRule-meta.xml
<ValidationRule>
    <fullName>CONSTANCIAS_Usuario_firmador</fullName>
    <active>true</active>
    <description>Llenar usuario firmador</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Constancia&apos;, ISPICKVAL(Constancia__c ,&apos;A4&apos;),
ISBLANK(Usuario_firmador__c),
Viene_Email_2_Case__c == false,
!ISPICKVAL(Origin,&apos;Agencias_Banco&apos;)

)</errorConditionFormula>
    <errorDisplayField>Usuario_firmador__c</errorDisplayField>
    <errorMessage>Debes establecer un usuario</errorMessage>
</ValidationRule>