force-app/main/default/objects/Case/validationRules/ESTADOS_CUENTA_fInicial_menor_fFinal.validationRule-meta.xml
<ValidationRule>
    <fullName>ESTADOS_CUENTA_fInicial_menor_fFinal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(RecordType.DeveloperName = &apos;Estados_Cuenta&apos;, RecordType.DeveloperName = &apos;Constancia&apos;), Fecha_desde__c &gt;= Fecha_hasta__c)</errorConditionFormula>
    <errorDisplayField>Fecha_hasta__c</errorDisplayField>
    <errorMessage>La fecha final no debe ser igual o menor a la inicial</errorMessage>
</ValidationRule>