force-app/main/default/objects/Case/validationRules/ESTADOS_CUENTA_Validar_fecha_inicial.validationRule-meta.xml
<ValidationRule>
    <fullName>ESTADOS_CUENTA_Validar_fecha_inicial</fullName>
    <active>false</active>
    <description>Para cuando se selecciona estado de cuenta detallado personalizado.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Estados_Cuenta&apos;,   ISPICKVAL(Estado_Cuenta_Detallado__c, &apos;Personalizado&apos;), OR( ISBLANK(Fecha_hasta__c),  ISBLANK(Fecha_desde__c) ))</errorConditionFormula>
    <errorDisplayField>Fecha_desde__c</errorDisplayField>
    <errorMessage>Debes estipular una fecha inicial</errorMessage>
</ValidationRule>