force-app/main/default/objects/Case/validationRules/Llenar_motivo_de_rechazo.validationRule-meta.xml
<ValidationRule>
    <fullName>Llenar_motivo_de_rechazo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status, &apos;Rechazado&apos;), ISPICKVAL(Motivo_rechazo__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Motivo_rechazo__c</errorDisplayField>
    <errorMessage>Debes seleccionar un motivo de rechazo</errorMessage>
</ValidationRule>