force-app/main/default/objects/Case/validationRules/No_cerrar_casos_sin_adjunto_AyD.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cerrar_casos_sin_adjunto_AyD</fullName>
    <active>true</active>
    <description>No cerrar caso DAU sin archivo adjunto</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Aumento_Disminucion_Aportes&apos;, Archivo_Adjunto__c = false, ISCHANGED(Status), ISPICKVAL(Status, &apos;Cerrado&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Debe adjuntar un archivo al caso para poder cerrarlo</errorMessage>
</ValidationRule>