force-app/main/default/objects/Case/validationRules/No_cerrar_casos_sin_aprobado_ActInfo.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cerrar_casos_sin_aprobado_ActInfo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Actualizacion_informacion&apos;, 
    !Aprobado__c,
    ISCHANGED(Status),
    !Viene_Portal_Autogestion__c,
    ISPICKVAL(Status, &apos;Cerrado&apos;),
    OR(
        !ISBLANK(Nombre_Cliente__c),
        !ISBLANK(Apellidos__c), 
        !ISBLANK(Segundo_nombre__c), 
        !ISBLANK(Segundo_apellido__c),
        !ISPICKVAL(Tipo_Identificacion__c, &apos;&apos;), 
        !ISBLANK(Identificacion__c), 
        !ISPICKVAL(Sexo__c, &apos;&apos;),
        !ISBLANK(Fecha_Nacimiento__c), 
        !ISBLANK(Correo_Electronico__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>El caso contiene modificaciones en campos críticos, para poder cerrarlo debe estar aprobado.</errorMessage>
</ValidationRule>