force-app/main/default/objects/Case/validationRules/No_cerrar_casos_sin_aprobado_Constancias.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cerrar_casos_sin_aprobado_Constancias</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Constancias&apos; , !Aprobado__c,  ISCHANGED(Status),  ISPICKVAL(Status, &apos;Cerrado&apos;),  ISPICKVAL( Constancia__c, &apos;Compromiso de Aporte&apos;)   )</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>El caso debe estar aprobado para poder cerrarlo</errorMessage>
</ValidationRule>