force-app/main/default/objects/Case/validationRules/No_cerrar_casos_sin_aprobado_Retiros.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cerrar_casos_sin_aprobado_Retiros</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Retiros&apos; , OR(!Aprobado__c, !Segunda_aprobacion__c),  ISCHANGED(Status),  ISPICKVAL(Status, &apos;Cerrado&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>El caso debe estar aprobado para poder cerrarlo</errorMessage>
</ValidationRule>