force-app/main/default/objects/Case/validationRules/No_cerrar_casos_sin_aprobado_subproducto.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cerrar_casos_sin_aprobado_subproducto</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Cambio_Subproducto&apos; , !Aprobado__c,  ISCHANGED(Status),  ISPICKVAL(Status, &apos;Cerrado&apos;)  )</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>El caso debe estar aprobado para poder cerrarlo</errorMessage>
</ValidationRule>