force-app/main/default/objects/Case/validationRules/ValidationFechaHasta.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationFechaHasta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Estados_Cuenta&apos;, OR(Fecha_hasta__c &gt;  TODAY(), Fecha_desde__c &gt;  TODAY()) )</errorConditionFormula>
    <errorMessage>No puede seleccionar una fecha mayor a la actual</errorMessage>
</ValidationRule>