force-app/main/default/objects/Case/validationRules/Visualizar_Membrete.validationRule-meta.xml
<ValidationRule>
    <fullName>Visualizar_Membrete</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Viene_Portal_Autogestion__c,  RecordType.Name =&apos;Constancia&apos;,  
  !ISPICKVAL(Constancia__c, &apos;Saldo&apos;), !ISPICKVAL(Constancia__c, &apos;A1&apos;))</errorConditionFormula>
    <errorDisplayField>Viene_Portal_Autogestion__c</errorDisplayField>
    <errorMessage>Para este tipo de constancia no se permite usar membrete</errorMessage>
</ValidationRule>