force-app/main/default/objects/Case/listViews/Actualizacion.listView-meta.xml
<ListView>
    <fullName>Actualizacion</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Retiros</value>
    </filters>
    <label>Actualización de información</label>
</ListView>