force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>equals</operation>
        <value>estado de cuenta</value>
    </filters>
    <label>Todos los casos abiertos</label>
</ListView>