force-app/main/default/objects/Case/listViews/Aprobacion_Intermedia_Retiros_Case.listView-meta.xml
<ListView>
    <fullName>Aprobacion_Intermedia_Retiros_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Aprobacion Intermedia Retiros</label>
    <queue>Aprobacion_Intermedia_Retiros</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>