force-app/main/default/objects/Case/listViews/Aprobacion_SubGerencia_SAC_Case.listView-meta.xml
<ListView>
    <fullName>Aprobacion_SubGerencia_SAC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Aprobación SubGerencia SAC</label>
    <queue>Aprobacion_SubGerencia_SAC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>