force-app/main/default/objects/Case/listViews/Aprobacion_Supervisor_SAC_Case.listView-meta.xml
<ListView>
    <fullName>Aprobacion_Supervisor_SAC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Aprobación Supervisor SAC</label>
    <queue>Aprobacion_Supervisor_SAC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>