force-app/main/default/objects/Case/listViews/Aprobadores_casos_SAC_Case.listView-meta.xml
<ListView>
    <fullName>Aprobadores_casos_SAC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Aprobadores casos SAC</label>
    <queue>Aprobadores_casos_SAC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>