force-app/main/default/objects/Case/listViews/Aprobadores_de_Retiro_Case.listView-meta.xml
<ListView>
    <fullName>Aprobadores_de_Retiro_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pendiente de aprobación</value>
    </filters>
    <label>Aprobadores de Retiro</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>