force-app/main/default/objects/Case/listViews/Aprobar_Caso_A_D_Case.listView-meta.xml
<ListView>
    <fullName>Aprobar_Caso_A_D_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asunto_hoy__c</field>
        <operation>equals</operation>
        <value>Modificación aportes</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>equals</operation>
        <value>Modificación aportes</value>
    </filters>
    <filters>
        <field>Enviar_aprobacion_AD__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pendiente de aprobación</value>
    </filters>
    <label>Aprobar Caso A&amp;D</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>