force-app/main/default/objects/Case/listViews/Aumento_Disminuci_n_de_aportes.listView-meta.xml
<ListView>
    <fullName>Aumento_Disminuci_n_de_aportes</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Empresa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Aumento_Disminucion_Aportes</value>
    </filters>
    <label>Aumento / Disminución de aportes</label>
</ListView>