force-app/main/default/objects/Case/listViews/Casos_Actualiza_Olga.listView-meta.xml
<ListView>
    <fullName>Casos_Actualiza_Olga</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Actualizacion_informacion</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pendiente de aprobación,Pendiente segunda aprobación</value>
    </filters>
    <label>Casos Actualiza Olga/Cintya</label>
    <sharedTo>
        <role>Oficial_de_Operaciones_Back_Office</role>
        <role>Sub_Gerente_de_Operaciones_y_Tecnolog_a</role>
    </sharedTo>
</ListView>