force-app/main/default/objects/Case/listViews/CASOS_DEVUELTOS.listView-meta.xml
<ListView>
    <fullName>CASOS_DEVUELTOS</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Devuelto</value>
    </filters>
    <label>Casos Devueltos</label>
</ListView>