force-app/main/default/objects/Case/listViews/Casos_Email2Case_Case.listView-meta.xml
<ListView>
    <fullName>Casos_Email2Case_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Aprobación SubGerencia SAC</label>
    <queue>Aprobacion_SubGerencia_SAC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>