force-app/main/default/objects/Case/listViews/Casos_Retiros_primera_aprobacion.listView-meta.xml
<ListView>
    <fullName>Casos_Retiros_primera_aprobacion</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Retiros</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pendiente de aprobación</value>
    </filters>
    <label>Casos Retiros primera aprobación</label>
</ListView>